backend/k8s/overlays/production-eu/app-service-eu.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc-eu
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "backendconfig-default"}'
spec:
  selector:
    app: playground-sandbox
  ports:
    - port: 8888
      targetPort: 8888
      name: app-port
