backend/k8s/overlays/production-eu/external-http-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http
  namespace: default
spec:
  gatewayClassName: gke-l7-gxlb-mc
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
  addresses:
    - type: NamedAddress
      value: playgrund-sandbox
