backend/k8s/overlays/production-eu/public-api-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: public-api-route
  namespace: default
spec:
  parentRefs:
    - kind: Gateway
      namespace: default
      name: external-http
  hostnames:
    - "api.34.98.91.126.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /us
      backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: app-svc-us
          port: 8888
    - matches:
        - path:
            type: PathPrefix
            value: /eu
      backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: app-svc-eu
          port: 8888
    - backendRefs:
        - name: app-svc
          group: net.gke.io
          kind: ServiceImport
          port: 8888
