backend/k8s/overlays/production-eu/public-vscode-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: public-vscode-route
  namespace: default
spec:
  parentRefs:
    - kind: Gateway
      namespace: default
      name: external-http
  hostnames:
    - "*.vscode.34.98.91.126.nip.io"
  rules:
    - backendRefs:
        - name: nginx
          group: net.gke.io
          kind: ServiceImport
          port: 3773
